--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "dev:turbo": "next dev --turbo",
-    "build": "next build --turbo",
+    "build": "next build",
     "build:webpack": "next build",
+    "build:turbo": "next build --turbo",
     "start": "next start",
     "lint": "next lint",
     "typeorm": "typeorm-ts-node-commonjs",
